src/objects/skuid__Preferences__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>skuid__Auto_Assign_Licenses_on_Activation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, Skuid will auto-assign a License to Skuid (and optionally other packages) when a new user is created or newly-activated.</description>
        <label>Auto Assign Licenses on Activation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Auto_Assign_Perm_Sets_on_Activation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, Skuid will auto-assign the &quot;Skuid Page Viewer&quot; Permission Set (and/or other Permission Sets) when a new user is created or newly-activated.</description>
        <label>Auto Assign Perm Sets on Activation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Auto_Gen_Page_Support_File__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, Skuid will automatically generate a Page Support File, required for Lightning Support, as a Static Resources when saving a Page in the Composer.</description>
        <label>Auto Gen Page Support File in Composer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Auto_Revoke_Licenses_on_Deactivation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, Skuid will auto-revoke a License to Skuid (and optionally licenses to other packages) when a user is deactivated.</description>
        <label>Auto Revoke Licenses on Deactivation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Auto_Revoke_Perm_Sets_on_Deactivation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, Skuid will auto-revoke the Skuid Page Viewer (and/or other Permission sets) when a user is deactivated.</description>
        <label>Auto Revoke Perm Sets on Deactivation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Default_Builder_Theme__c</fullName>
        <defaultValue>&quot;Builder Light&quot;</defaultValue>
        <label>Default Composer Theme</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__Default_Mobile_Builder_Theme__c</fullName>
        <label>Default Mobile Composer Theme</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__Default_Mobile_Theme__c</fullName>
        <label>Default Mobile Theme</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__Default_Theme__c</fullName>
        <label>Default Theme</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__Disable_Collaboration_Polling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable features of the Collaboration Framework that require client-side server polling, such as the Page Interaction Service. Features not dependent on polling, such as Page Revision Conflict Detection, are not affected by this setting.</description>
        <label>Disable Collaboration Polling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Disable_Hotkeys_Skuid_App__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables all hotkeys in the Skuid app. Does NOT disable hotkeys in Skuid runtime.</description>
        <label>Disable Hotkeys for Skuid App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Global_Feedback_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Switch to enable/disable the Global Feedback tab for Skuid pages.</description>
        <label>Global Feedback Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Global_Feedback_Position__c</fullName>
        <defaultValue>&quot;right&quot;</defaultValue>
        <description>Position on the page in which the Global Feedback tab will render.</description>
        <label>Global Feedback Position</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__Loading_Page_Placeholder__c</fullName>
        <defaultValue>&quot;skuid__SkuidLoadingPlaceholder&quot;</defaultValue>
        <description>The name of a Static Resource containing an image to display while loading a Skuid Page</description>
        <label>Loading Page Placeholder Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__Offline_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(Optional) Allows your organization to use Skuid in Offline Mode.</description>
        <label>Offline Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Offline_Sync_Automatically__c</fullName>
        <defaultValue>true</defaultValue>
        <description>(Optional) Begin syncing offline changes automatically while online.</description>
        <label>Automatically Sync Offline Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Offline_Sync_Interaction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(Optional) Require user to interact with page before syncing.</description>
        <label>Require User Interaction on Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Offline_Sync_Status_Bar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show a default status bar when there are syncs to be saved.</description>
        <label>Show Sync Status Bar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Package_Names_For_Auto_Assignment__c</fullName>
        <defaultValue>&quot;skuid&quot;</defaultValue>
        <description>(Optional) Namespaces of packages to which to auto-assign licenses when new users are created or activated. Semi-colon delimited.</description>
        <label>Packages to Auto-Assign Licenses to</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>skuid__Package_Names_For_Auto_Revocation__c</fullName>
        <defaultValue>&quot;skuid&quot;</defaultValue>
        <description>(Optional) Namespaces of packages from which licenses should be auto-revoked when users are deactivated. Semi-colon delimited.</description>
        <label>Packages to Auto-Revoke Licenses to</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>skuid__Perm_Sets_For_Auto_Assignment__c</fullName>
        <defaultValue>&quot;skuid__Skuid_Page_Viewer&quot;</defaultValue>
        <description>(Optional) Names of Permission Sets to auto-assign to new or newly-activated users. Semi-colon delimited and namespace-prefixed, e.g. &quot;skuid__Skuid_Page_Viewer&quot;</description>
        <label>Permission Sets to Auto-Assign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>skuid__Perm_Sets_For_Auto_Revocation__c</fullName>
        <defaultValue>&quot;skuid__Skuid_Page_Viewer&quot;</defaultValue>
        <description>(Optional) Names of Permission Sets to auto-revoke from deactivated users. Semi-colon delimited and namespace-prefixed, e.g. &quot;skuid__Skuid_Page_Viewer&quot;</description>
        <label>Permission Sets to Auto-Revoke</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>skuid__Show_SF_Header_Skuid_Core__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Salesforce Header in Skuid Core</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Use_Component_Packs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Component Packs</label>
        <type>Checkbox</type>
    </fields>
    <label>Preferences</label>
</CustomObject>